--- a/backend/pin projects/pinterest/views/profile.ejs
+++ b/backend/pin projects/pinterest/views/profile.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header.ejs %>
+<!-- <a href="/logout">logout</a> -->
 <!-- profile page set up -->
 <div class="profile w-full min-h-screen bg-zinc-800 text-white pt-1">
     <div class="profdets flex flex-col items-center mt-24">
@@ -8,13 +9,13 @@
                 <i  class="text-zinc-600 ri-pencil-fill"></i>
             </span>
         <div class="w-32 h-32 bg-red-300 rounded-full">
-            <img style="object-fit: cover; height: 100%; width: 100%; border-radius: 50%;overflow: hidden;" src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fG5hdHVyZXxlbnwwfHwwfHx8MA%3D%3D" alt="">
+            <img style="object-fit: cover; height: 100%; width: 100%; border-radius: 50%;overflow: hidden;" src="/images/uploads/<%= user.profileImage%>" alt=""> <!--select profile image chage -->
         </div>
     </div>
         <h1 class="text-3xl font-semibold mt-2">shubham meshram</h1>
         <h3 class="text-md">@shubham</h3>
         <a class="px-6 py-3 bg-zinc-500 rounded-full text-xs font-semibold" href="/edit">Edit</a>
-        <button class="px-7 py-2 rounded-lg bg-red-900 mt-3">add new post</button>
+        <a href="/add" class="px-7 py-2 rounded-lg bg-red-900 mt-3">add new post</a>
     </div>
     <!-- this file set up form and it is importance -->
     <form id="uploadform" hidden action="/fileupload" method="post" enctype="multipart/form-data">
@@ -25,10 +26,10 @@
     <div class="cards flex flex-wrap gap-10 pt-10 p-10">
         <div>
         <div class="w-53 h-30 bg-zinc-300 rounded-lg">
-            <img src="https://images.unsplash.com/photo-1626501419860-2924a77468b8?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fG51dHVyZXxlbnwwfHwwfHx8MA%3D%3D" alt="">
+            <img src="/images/uploads/<%= user.posts[0].image %>" alt="">
         </div>
         <h3 class="text-xl font-semibold mt-2">All Pins</h3>
-        <h5 class="text-sm font-medium opacity-70" >34 Pins</h5>
+        <h5 class="text-sm font-medium opacity-70" ><%= user.posts.length %> Pins</h5>
     </div>
     </div>
 
