--- a/backend/pin projects/pinterest/views/add.ejs
+++ b/backend/pin projects/pinterest/views/add.ejs
@@ -3,8 +3,8 @@
     <h1 class="ml-10">add new post</h1>
     <form action="/createpost" method="post" enctype="multipart/form-data">
         <input class="flex mt-5 w-80 rounded-md ml-10" type="file" name="postimage">
-        <input class="flex mt-5 w-80 rounded-md ml-10" type="text" name="title" placeholder="title">
-        <textarea class="flex mt-5 w-80 rounded-md ml-10" name="description" id="description" cols="30" rows="3" placeholder="description"></textarea>
+        <input class="flex mt-5 w-80 rounded-md ml-10 text-black" type="text" name="title" placeholder="title">
+        <textarea class="flex mt-5 w-80 rounded-md ml-10 text-black" name="description" id="description" cols="30" rows="3" placeholder="description"></textarea>
         <input class="flex mt-5 w-80 ml-10 bg-red-900 rounded-lg text-xl" type="submit" value="create new post">
     </form>
 </div>
