--- a/Projects/portfolio website/style.css
+++ b/Projects/portfolio website/style.css
@@ -78,7 +78,7 @@ nav .navbarname {
 
 /* page2 */
 .page2 {
-    min-height: 100vh;
+    min-height: 120vh;
     /* background-color: red; */
     display: flex;
     align-items: center;
@@ -176,3 +176,229 @@ nav .navbarname {
 .page2 .edu2 {
     margin-left: 100px;
 }
+
+
+
+/* page3 */
+
+.page3{
+    min-height: 100vh;
+    /* background-color: red; */
+
+    
+}
+.page3 h1{
+    margin-top: 100px;
+    padding: 0px 150px;
+    font-size: 3vw;
+}
+
+.page3 .card1{
+    height: 450px;
+    width: 400px;
+    /* background-color: red; */
+    border: 2px solid yellow;
+    border-radius: 10px;
+}
+
+.page3 #card1{
+    background-image: url("https://images.unsplash.com/photo-1667239711059-9e5d970eb007?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGFtYXpvbmUlMjBwYWdlfGVufDB8fDB8fHwwD");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.page3 #card2{
+    background-image: url("https://images.unsplash.com/photo-1500375592092-40eb2168fd21?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGFuaW1hdGVkJTIwd2Vic2l0ZXxlbnwwfHwwfHx8MA%3D%3D");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.page3 #card3{
+    background-image: url("https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YW5pbWF0ZWQlMjB3ZWJzaXRlfGVufDB8fDB8fHww");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+
+.page3 .card1 p button{
+    display: flex;
+    align-items: center;
+}
+
+.page3 .card1 button{
+    margin-left: 45%;
+    margin-top: 10px;
+    font-size: 25px;
+}
+
+.page3 .contenar{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 5%;
+}
+
+.page3 .contenar .cards p{
+    background-color:transparent;
+   
+}
+
+.page3 .card1 p{
+    border-radius: 10px;
+    background-image: linear-gradient(red,yellow);
+    text-align: center;
+    margin-bottom: 100px;
+    padding: 177px 30px;
+    opacity: 0;
+
+}
+
+
+.page3 .card1 p:hover{
+    opacity: 1;
+    scale: 1.05;
+
+}
+
+
+.page3 .more{
+    margin-top: 100px;
+    /* background-color: red; */
+}
+
+.page3 .more-p{
+    text-decoration: none;
+    font-size: 1.2vw;
+    background-color: yellow;
+    color: black;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 45%;
+}
+
+
+
+/* page 4  */
+
+
+.page4{
+    min-height: 100vh;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 170px;
+}
+
+
+.page4 .cot1{
+    margin: 10px;
+    height: 500px;
+    width: 50%;
+
+    /* background-color: blue; */
+
+}
+
+.page4 .cot1 h1{
+    font-size: 4vw;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.page4 .cot1 .contact{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    /* margin-top: 30px; */
+}
+
+.page4 .cot1 .contact i{
+   margin: 20px;
+}
+
+.page4 .cot1 .contact a{
+    padding: 5px 20px;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 0.7vw;
+}
+
+.page4 .cot1 .socialmedia i{
+    padding: 10px 20px;
+    margin-left: 20px;
+    font-size: 2vw;
+}
+
+.page4 .cot1 .downloadbtn{
+    margin-top: 50px;
+    margin-left: 40px;
+    border: none;
+    border-radius: 10px;
+    padding: 20px 50px;
+    color: black;
+    background-color: yellow;
+}
+
+
+
+
+
+
+
+.page4 .cot2{
+    height: 500px;
+    width: 50%;
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 20px;
+    padding-right: 100px;
+    
+}
+
+.page4 .cot2 .name-email{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: #494747;
+    
+}
+
+.page4 .cot2 #email{
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    margin-top: -45px; 
+    background-color: #494747;
+}
+
+
+
+.page4 .cot2 .message{
+    width: 100%;
+    height: 200px;
+    border: none;
+    border-radius: 5px;
+    margin-top: -45px;
+    background-color: #494747;
+
+    
+}
+
+.page4 .cot2 .btn{
+    border: none;
+    padding: 20px 100px;
+    margin-left: -450px;
+    border-radius: 10px;
+    background-color: rgb(205, 205, 16);
+    color: #111;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+
+
