--- a/Projects/portfolio website/style.css
+++ b/Projects/portfolio website/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
     /* background-color: black; */
     color: #fff;
     font-family: "Roboto", sans-serif;
@@ -20,7 +21,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 20px 100px;
-    background-color: #111;
+    background-color: #111111f8;
     position: sticky;
     top: 0;
     z-index: 99;
@@ -41,16 +42,18 @@ nav .navbarname {
     gap: 50px;
     background-color: none;
     text-transform: capitalize;
+    margin-right: 50px;
     
    
 }
 
-nav .navbarname h1{
+nav .navbarname a{
     font-size: 20px;
+    text-decoration: none;
     
 }
 
-nav .navbarname h1:hover{
+nav .navbarname a:hover,nav a.active{
     border-bottom: 2px solid rgb(160, 128, 21);
 
 }
@@ -63,15 +66,20 @@ video{
     z-index: -1;
 }
 
+#home{
+    position: sticky;
+    top: 0;
+    z-index: 2;
+
+}
+
 .contaner {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
     background-color: #111111bd;
-    position: sticky;
-    top: 0;
-    z-index: 2;
+    
     
    
 }
@@ -119,6 +127,12 @@ video{
 
 
 /* about me page2 */
+#About{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    
+}
 .page2 {
     min-height: 120vh;
     background-color:#111;
@@ -126,9 +140,7 @@ video{
     align-items: center;
     justify-content: space-around;
     padding: 0px 100px;
-    position: sticky;
-    top: 0;
-    z-index: 10;
+    
     
 
 
@@ -282,7 +294,7 @@ video{
 
 .page3{
     min-height: 100vh;
-    background-color: #111;
+    background-color:#111;
     position: relative;
     /* top: 0; */
     z-index: 11;
@@ -290,7 +302,7 @@ video{
     
 }
 .page3 h1{
-    padding-top: 20px;
+    padding-top: 100px;
     padding-left: 100px;
     font-size: 2.5vw;
     font-weight: 700;
@@ -321,26 +333,20 @@ video{
   background-repeat: no-repeat;
 }
 
+.page3 #card1:hover{
+    scale: 1.02;
 
-
-.page3 .card1 p button{
-    display: flex;
-    align-items: center;
 }
 
-/* .page3 .card1 button{
-    margin-left: 45%;
-    margin-top: 10px;
-    font-size: 25px;
-    background-color: transparent;
-    
-} */
+.page3 #card2:hover{
+    scale: 1.02;
 
-.page3 .card1 i{
-    font-size: 10px;
-    
-    
 }
+.page3 #card3:hover{
+    scale: 1.02;
+
+}
+
 
 .page3 .contenar{
     display: flex;
@@ -349,29 +355,49 @@ video{
     margin-top: 5%;
 }
 
-.page3 .contenar .cards p{
-    background-color:transparent;
-   
+.page3 .hovercard{
+    background-image: linear-gradient(rgba(255, 0, 0, 0),rgb(160, 128, 21));
+    height: 450px;
+    width: 400px;
+    border-radius: 10px;
+    opacity: 0;
 }
 
 .page3 .card1 p{
     border-radius: 10px;
-    background-image: linear-gradient(rgba(255, 0, 0, 0.985),rgb(160, 128, 21));
     text-align: center;
-    margin-bottom: 100px;
-    padding: 177px 30px;
-    opacity: 0;
-
+    padding:160px 10px;
+    color: #fff;
 }
 
 
-.page3 .card1 p:hover{
+.page3 .hovercard .pbtns{
+    margin-left: 45px;
+}
+
+
+
+.page3 .hovercard .pbtn{
+    background-color:#c9c2c2;
+    color: #111;
+    padding: 10px 50px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    margin: 10px;
+    
+}
+
+.page3 .hovercard:hover{
     opacity: 1;
-    scale: 1.05;
-
+    scale: 1.03;
 }
 
 
+
+
+
+/* animation part */
 .page3 .more{
     margin-top: 50px;
     margin-left: 85%;
@@ -392,6 +418,7 @@ video{
     background-color: rgb(160, 128, 21);
     border-radius: 50%;
     padding: 10px;
+    color: #111;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -401,7 +428,7 @@ video{
 
 .page3 .more-p:hover{
     background-color: rgb(208, 164, 21);
-    color: #111;
+    color: #fff;
 
 }
 
